<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="file_provider_authority" translatable="false">"com.stochanskyi.nanittask.fileProvider"</string>

    <!-- Profile -->

    <string name="label_profile">Profile</string>
    <string name="hint_name">Name</string>
    <string name="hint_date">Date</string>
    <string name="label_open_birthday">Show birthday screen</string>
    <string name="description_profile_image">Profile image</string>
    <string name="title_select_birthday">Select child\'s birthday</string>
    <string name="title_pick_image">Pick image</string>

    <!-- Birthday -->

    <string name="label_birthday">Birthday</string>
    <string name="label_share">Share the news</string>

    <plurals name="age_months">
        <item quantity="one">month old</item>
        <item quantity="other">months old</item>
    </plurals>

    <plurals name="age_years">
        <item quantity="one">year old</item>
        <item quantity="other">years old</item>
    </plurals>

    <string name="birthday_name_pattern">Today %1$s is</string>
    <string name="description_background_image">Backgroud image</string>
    <string name="description_logo">Logo</string>
    <string name="description_left_swirls">Left swirls</string>
    <string name="description_right_swirls">Right swirls</string>

</resources>