<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/birthday_background_blue">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="4dp"
        android:scaleType="centerCrop"
        app:strokeWidth="8dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.NanitTask.Circle"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toTopOf="@id/image_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:strokeColor="@color/birthday_background_blue_darker"
        tools:src="@drawable/ic_profile_placeholder_blue" />

    <ImageView
        android:id="@+id/image_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description_background_image"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:src="@drawable/bg_birthday_blue" />

    <com.google.android.material.button.MaterialButton
        style="@style/ImageButton.BackButton"
        android:id="@+id/button_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        app:strokeWidth="0dp"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:icon="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        style="@style/BirthdayText"
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:gravity="center"
        android:maxLines="2"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Today Cristiano Ronaldo is" />

    <com.stochanskyi.nanittask.presentation.ui.views.AgeView
        android:id="@+id/view_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        app:spacing="5dp"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintBottom_toTopOf="@id/text_age_unit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_left_swirls"
        android:contentDescription="@string/description_left_swirls"
        app:layout_constraintTop_toTopOf="@id/view_age"
        app:layout_constraintBottom_toBottomOf="@id/view_age"
        app:layout_constraintEnd_toStartOf="@id/view_age" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_right_swirls"
        android:contentDescription="@string/description_right_swirls"
        app:layout_constraintTop_toTopOf="@id/view_age"
        app:layout_constraintBottom_toBottomOf="@id/view_age"
        app:layout_constraintStart_toEndOf="@id/view_age" />

    <TextView
        style="@style/BirthdayText"
        android:id="@+id/text_age_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/view_age"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="month old" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:barrierMargin="-20dp"
        app:constraint_referenced_ids="image_profile" />

    <com.google.android.material.button.MaterialButton
        style="@style/ImageButton.BirthdayCameraImage"
        android:id="@+id/image_camera"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:icon="@drawable/ic_camera"
        app:layout_constraintTop_toTopOf="@id/image_profile"
        app:layout_constraintBottom_toBottomOf="@id/image_profile"
        app:layout_constraintStart_toStartOf="@id/image_profile"
        app:layout_constraintEnd_toEndOf="@id/image_profile"
        tools:backgroundTint="@color/birthday_background_blue_darker" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_nanit_logo"
        app:layout_constraintBottom_toTopOf="@id/button_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/description_logo" />

    <com.google.android.material.button.MaterialButton
        style="@style/AppButton.Rounded"
        android:id="@+id/button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:backgroundTint="@color/share_button_background"
        android:text="@string/label_share"
        android:drawableEnd="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>